--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
     <meta name="theme-color" content="#fcbf49" />
 
     <!--Page card for sharing-->
-    <meta property="og:url" content="www.google.com" />
+    <meta property="og:url" content="https://pablo-taube.github.io/GEASI" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="GEASI | UFT" />
-    <meta property="og:image" content="/assets/logos/geasi-logo.png" />
+    <meta property="og:image" content="https://pablo-taube.github.io/GEASI/assets/logos/geasi-logo.png" />
     <meta property="og:description" content="Grupo de Estudos Aplicados à Segurança Internacional da Universidade Federal do Tocantins"/>
   </head>
+
 </html>
