Changed logo for link sharing and fixed the page logo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>GEASI | UFT</title>
 
     <!--Page icon-->
-    <link rel="icon" href="/assets/logos/geasi-logo.png">
+    <link rel="icon" type="image/x-icon" href="/assets/logos/geasi-logo.png">
     
     <!--Main  stylesheet and theme colors-->
     <link rel="stylesheet" href="main-style.css">
@@ -25,7 +25,7 @@
     <meta property="og:url" content="https://pablo-taube.github.io/GEASI" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="GEASI | UFT" />
-    <meta property="og:image" content="https://pablo-taube.github.io/GEASI/assets/logos/geasi-logo.png" />
+    <meta property="og:image" content="https://pablo-taube.github.io/GEASI/assets/logos/geasi-logo-com-fundo.png" />
     <meta property="og:description" content="Grupo de Estudos Aplicados à Segurança Internacional da Universidade Federal do Tocantins"/>
   </head>
 
