Added the first version of the heading

--- a/index.html
+++ b/index.html
@@ -29,4 +29,27 @@
     <meta property="og:description" content="Grupo de Estudos Aplicados à Segurança Internacional da Universidade Federal do Tocantins"/>
   </head>
 
+<body>
+    <!-- Header Section of the Index page -->
+    <header>
+        <section class="header-section">
+        <div class="header-section__logo">
+            <img src="/assets/logos/geasi-logo.png" alt="GEASI's Logo">
+        </div>
+    
+        <div class="header-section__nav">
+            <a class="floating-menu__link-item" href="#" data-hover=""><img src="">Home</a>
+            <a class="floating-menu__link-item" href="#" data-hover=""><img src="">Sobre</a>
+            <a class="floating-menu__link-item" href="#" data-hover=""><img src="">Projetos</a>
+            <a class="floating-menu__link-item" href="#" data-hover=""><img src="">Publicações</a>
+            <a class="header-section__contact-link" href="mailto:geasi@mail.uft.edu.br?subject=Contato para mais informações&body=Olá, entro em contato através do site e gostaria de saber mais informações." data-hover="Envie um e-mail">Contato</a>
+        </div>
+    
+        <div class="header-section__lang">
+            <a data-hover="English Version (EN-US)"><img src="/assets/icons/usa-flag.png">EN</a>
+            <a data-hover="Versão em Português(PT-BR)"><img src="/assets/icons/usa-flag.png">PT</a>
+        </div>
+        </section>
+    </header>
+</body>
 </html>
