Fixed the page icon not showing

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>GEASI | UFT</title>
 
     <!--Page icon-->
-    <link rel="icon" type="image/x-icon" href="/assets/logos/geasi-logo.png">
+    <link rel="shortcut icon" type="image/jpg" href="/assets/logos/geasi-logo.png">
     
     <!--Main  stylesheet and theme colors-->
     <link rel="stylesheet" href="main-style.css">
