--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     
         <div class="header-section__lang">
             <a data-hover="English Version (EN-US)"><img src="./assets/icons/usa-flag.png">EN</a>
-            <a data-hover="Versão em Português(PT-BR)"><img src="./assets/icons/usa-flag.png">PT</a>
+            <a data-hover="Versão em Português(PT-BR)"><img src="./assets/icons/brazil-flag.png">PT</a>
         </div>
         </section>
     </header>
