Added the introductory section bg

--- a/index.html
+++ b/index.html
@@ -51,5 +51,19 @@
         </div>
         </section>
     </header>
+
+    <main>
+        <section class="large-container-flex introductory-card">
+            <div class="introductory-card-title">
+                <h1>GEASI</h1>
+                <h2>Grupo de Estudos Aplicados à Segurança Internacional</h2>
+            </div>
+
+            <div class="introductory-card-img">
+                
+            </div>
+        </section>
+    </main>
+
 </body>
 </html>
