Made the first version of the index

--- a/index.html
+++ b/index.html
@@ -53,17 +53,81 @@
     </header>
 
     <main>
-        <section class="large-container-flex introductory-card">
+        <section class="large-container-flex introductory-section">
             <div class="introductory-card-title">
                 <h1>GEASI</h1>
                 <h2>Grupo de Estudos Aplicados à Segurança Internacional</h2>
             </div>
 
             <div class="introductory-card-img">
-                
+
+            </div>
+        </section>
+
+        <section class="large-container-flex about-section">
+            <div class="about-section-img">
+
+            </div>
+
+            <div class="about-section-text">
+                <h3>O GEASI</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus molestie, nunc ac laoreet imperdiet, tellus nisi ultrices orci, vel tempor diam mauris eget velit. Nam eros nibh, vestibulum nec tristique sit amet, condimentum ac metus. Suspendisse facilisis justo id ligula efficitur sollicitudin. Nulla egestas scelerisque velit eget rutrum. Aenean finibus nibh condimentum velit fermentum molestie. Aenean dolor mauris, tincidunt vitae pharetra in, dictum vel eros. Sed nisl ex, sodales quis feugiat sed, pretium in purus. Mauris neque risus, porttitor vitae turpis vel, egestas fermentum augue. Donec varius non dui vitae vehicula. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+
+                    Nulla a suscipit ipsum. Donec vulputate quam eu elit cursus, pellentesque cursus dui posuere. Pellentesque quis nisl sapien. Integer lacus lorem, iaculis ut ipsum a, vulputate sagittis ligula. Proin consectetur vitae massa sed dignissim. Pellentesque risus arcu, auctor non condimentum vel, vehicula nec lacus. Sed mollis fermentum urna vel tempor. Maecenas sit amet nisi rhoncus, maximus mi sit amet, molestie mi. Nulla tristique urna id consequat blandit. Etiam vestibulum dictum tellus et gravida. Etiam aliquet neque mauris, ut sollicitudin nisl pulvinar nec. Integer a metus varius, mollis sapien quis, luctus libero. Aliquam sed elit sodales, bibendum leo vel, elementum ex. Phasellus hendrerit, velit id efficitur ornare, orci libero faucibus metus, lobortis pharetra tellus leo nec augue.</p>
+            </div>
+        </section>
+
+        <section class="medium-container-flex members-section">
+            <div>
+                <h3>Membros do GEASI</h3>
+            </div>
+            <div class="members-list">
+                <div class="member-card">
+                    <img src="" alt="">
+                    <h4>Fulano</h4>
+                    <h5>Discente</h5>
+                    <button class="member-btn">Lattes</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="medium-container-flex partners-section">
+            <div class="members-list">
+                <div class="member-card">
+                    <img src="" alt="">
+                    <h4>UFT</h4>
+                    <button class="partner-btn">Website</button>
+                </div>
             </div>
         </section>
     </main>
+
+    <footer>
+        <section class="upper-footer-section">
+            <div class="footer-contact">
+                <div class="footer-contact-logo">
+                    <img src="" alt="">
+                </div>
+                <div class="footer-contact-social">
+                    <a data-hover="E-mail"><img src="./assets/icons/email-icon.png" alt="email-icon"></a>
+                    <a data-hover="Instagram"><img src="./assets/icons/instagram-icon.png" alt="instagram-icon"></a>
+                    <a data-hover="Twitter"><img src="./assets/icons/twitter-icon.png" alt="twitter-icon"></a>
+                </div>
+            </div>
+    
+            <div class="footer-menu">
+                    <a class="footer-menu__link-item" href="#" data-hover=""><img src="">Home</a>
+                    <a class="footer-menu__link-item" href="#" data-hover=""><img src="">Sobre</a>
+                    <a class="footer-menu__link-item" href="#" data-hover=""><img src="">Projetos</a>
+                    <a class="footer-menu__link-item" href="#" data-hover=""><img src="">Publicações</a>
+                    <a class="header-section__contact-link" href="mailto:geasi@mail.uft.edu.br?subject=Contato para mais informações&body=Olá, entro em contato através do site e gostaria de saber mais informações." data-hover="Envie um e-mail">Contato</a>
+            </div>
+        </section>
+
+        <section class="developer-contact">
+            <h6>Developed with &hearts by <a href="https://www.linkedin.com/in/pablo-t-amorim/">Pablo Taube</a></h6>
+        </section>
+    </footer>
 
 </body>
 </html>
