Added title to partners section, added the logo at footer and fixed the heart code at footer

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         </div>
     
         <div class="header-section__nav">
-            <a class="floating-menu__link-item" href="#" data-hover=""><img src="">Home</a>
-            <a class="floating-menu__link-item" href="#" data-hover=""><img src="">Sobre</a>
-            <a class="floating-menu__link-item" href="#" data-hover=""><img src="">Projetos</a>
-            <a class="floating-menu__link-item" href="#" data-hover=""><img src="">Publicações</a>
+            <a class="floating-menu__link-item" href="#" data-hover="">Home</a>
+            <a class="floating-menu__link-item" href="#" data-hover="">Sobre</a>
+            <a class="floating-menu__link-item" href="#" data-hover="">Projetos</a>
+            <a class="floating-menu__link-item" href="#" data-hover="">Publicações</a>
             <a class="header-section__contact-link" href="mailto:geasi@mail.uft.edu.br?subject=Contato para mais informações&body=Olá, entro em contato através do site e gostaria de saber mais informações." data-hover="Envie um e-mail">Contato</a>
         </div>
     
@@ -92,6 +92,8 @@
         </section>
 
         <section class="medium-container-flex partners-section">
+            <h3>Parceiros e Apoiadores do GEASI</h3>
+
             <div class="members-list">
                 <div class="member-card">
                     <img src="" alt="">
@@ -106,7 +108,7 @@
         <section class="upper-footer-section">
             <div class="footer-contact">
                 <div class="footer-contact-logo">
-                    <img src="" alt="">
+                    <img src="./assets/logos/geasi-logo-com-fundo.png" alt="GEASI-logo">
                 </div>
                 <div class="footer-contact-social">
                     <a data-hover="E-mail"><img src="./assets/icons/email-icon.png" alt="email-icon"></a>
@@ -125,7 +127,7 @@
         </section>
 
         <section class="developer-contact">
-            <h6>Developed with &hearts by <a href="https://www.linkedin.com/in/pablo-t-amorim/">Pablo Taube</a></h6>
+            <h6>Developed with &hearts; by <a href="https://www.linkedin.com/in/pablo-t-amorim/">Pablo Taube</a></h6>
         </section>
     </footer>
 
