Changend the img size at   .header-section__lang a img{  and removed text from section lang

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         </div>
     
         <div class="header-section__lang">
-            <a data-hover="English Version (EN-US)"><img src="./assets/icons/usa-flag.png">EN</a>
-            <a data-hover="Versão em Português(PT-BR)"><img src="./assets/icons/brazil-flag.png">PT</a>
+            <a data-hover="English Version (EN-US)"><img src="./assets/icons/usa-flag.png"></a>
+            <a data-hover="Versão em Português(PT-BR)"><img src="./assets/icons/brazil-flag.png"></a>
         </div>
         </section>
     </header>
